@@ -791,6 +791,10 @@ class enigma_ui
                     $msg = rcube::Q($this->enigma->gettext('decrypterror'));
                 }
             }
+            else if ($status === enigma_engine::ENCRYPTED_PARTIALLY) {
+                $attrib['class'] = 'enigmawarning';
+                $msg = rcube::Q($this->enigma->gettext('decryptpartial'));
+            }
             else {
                 $attrib['class'] = 'enigmanotice';
                 $msg = rcube::Q($this->enigma->gettext('decryptok'));
@@ -821,8 +825,9 @@ class enigma_ui
                     $msg = rcube::Q($msg);
                 }
                 else if ($sig->valid) {
-                    $attrib['class'] = 'enigmanotice';
-                    $msg = rcube::Q(str_replace('$sender', $sender, $this->enigma->gettext('sigvalid')));
+                    $attrib['class'] = $sig->partial ? 'enigmawarning' : 'enigmanotice';
+                    $label = 'sigvalid' . ($sig->partial ? 'partial' : '');
+                    $msg = rcube::Q(str_replace('$sender', $sender, $this->enigma->gettext($label)));
                 }
                 else {
                     $attrib['class'] = 'enigmawarning';
